Add publication 1 modified

--- a/_publications/2020_ejpr.md
+++ b/_publications/2020_ejpr.md
@@ -5,11 +5,8 @@ permalink: /publication/2020_ejpr
 excerpt: 'In this paper we analyze public preferences over European integration in 13 countries using an online conjoint experiment.'
 date: 2020-01-01
 venue: 'European Journal of Political Research'
-paperurl: 'http://academicpages.github.io/files/paper1.pdf'
-citation: 'Hahm, H. Hilpert, D., and König, T. (2020). &quot;Institutional reform and public attitudes toward EU decision making.&quot; <i>European Journal of Political Research</i>. 59(3): 599-623. '
+paperurl: ''
+citation: 'Hahm, H. Hilpert, D., and König, T. (2020). &quot;Institutional reform and public attitudes toward EU decision making.&quot; <i>European Journal of Political Research</i>. 59(3): 599-623. [Paper](https://ejpr.onlinelibrary.wiley.com/doi/full/10.1111/1475-6765.12361) and [Replication materials](https://ejpr.onlinelibrary.wiley.com/action/downloadSupplement?doi=10.1111\%2F1475-6765.12361&file=ejpr12361-sup-0002-SuppMat.docx)'
 ---
-This paper is about the number 1. The number 2 is left for future work.
-
-[Paper](https://ejpr.onlinelibrary.wiley.com/doi/full/10.1111/1475-6765.12361) and [Replication materials](https://ejpr.onlinelibrary.wiley.com/action/downloadSupplement?doi=10.1111\%2F1475-6765.12361&file=ejpr12361-sup-0002-SuppMat.docx)
 
 
